# wa_bridge

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.override.example.yml  docker-compose.yml
.claude/agents/: fe-agent.md  feature-planner.md  go-app-architect.md  i18n-patterns.md  log-bug-tracker.md  postgresql-supabase-expert.md  route-feature-patterns.md  shadcn-component-creator.md  supabase-data-layer.md
.claude/commands/: i18n.md  shadcn.md
describer/: .env.example  main.py  pyproject.toml  setup.md
describer/processors/: audio.py  document.py  image.py
docs/: suggestions.md
docs/features/: 01-passenger-profiles.md  02-flight-requests.md  03-chat-to-request-linking.md  04-dashboard.md  05-bookings-and-itineraries.md  06-payment-tracking.md  07-document-management.md  08-message-templates.md  09-automated-notifications.md  10-conversation-tagging.md  11-ai-assisted-extraction.md  12-global-search.md  13-customer-timeline.md  14-reporting.md  15-multi-agent-support.md  PLAYWRIGHT_SCRAPERS.md  cloudflared.md  (+2 more)
flight-search-mcp/: package-lock.json  package.json  tsconfig.json
loki/: loki-config.yml
openclaw/: README.md
prometheus/: prometheus.yml
scripts/: .env.example  backup-n8n.sh  delete-group-media.sh  delete-videos.sh  restore-n8n.sh  setup-db-role.sh  setup-grafana-token.sh  setup-linux.sh
supabase/: config.toml
wa-sales/: .cta.json  .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts  wrangler.jsonc
whatsapp-api/: Dockerfile  entrypoint.sh  go.mod  go.sum  main.go
(+171 files in other folders)
